[python] prints out error message if pip install failed (#666)